--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,390 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+
+/* base styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: "Quicksand" !important;
+  color: #333;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 6px 12px;
+  background-color: rgb(34, 67, 143);
+}
+
+.navbar h1 {
+  font-size: 24px;
+  color: #dbdce1;
+}
+
+.navbar .links {
+  padding: 20px;
+}
+
+.navbar a {
+  margin-right: 16px;
+  text-decoration: none;
+  padding: 10px;
+  color: #2837df;
+  font-size: 18px;
+  font-weight: 500;
+  border-radius: 4px;
+  background-color: #f5f5f5;
+}
+
+.navbar a:hover {
+  background-color: #02030c;
+  color: #f5f5f5;
+}
+
+/* blog previews / list */
+
+.blog-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 60px;
+  width: 90%;
+  margin: 20px auto;
+}
+
+.title {
+  text-align: center;
+  font-size: 32px;
+  color: #8d28df;
+  margin: 10px;
+}
+
+.blog-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 30px;
+  border: 1px solid rgb(205, 201, 201);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 90%;
+  height: 90%;
+  background-color: #f5f5f5;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.blog-details h2 {
+  font-size: 20px;
+  color: #df289f;
+  margin-bottom: 10px;
+  text-align: left;
+  font-weight: bold;
+  margin-left: 30px;
+}
+
+.blog-details p {
+  font-size: 14px;
+  color: #161617;
+  margin-bottom: 10px;
+  font-weight: bold;
+  text-align: left;
+  margin-left: 30px;
+}
+
+.create p {
+  font-size: 15px;
+  margin-top: 10px;
+  color: #df28d0;
+  font-weight: bold;
+}
+
+.blog-preview p {
+  font-size: 14px;
+  color: #161617;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.blog-details:hover {
+  transform: scale(1.01);
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgb(34, 38, 39);
+}
+
+.blog-details div {
+  margin: 30px;
+  text-align: left;
+}
+
+.blog-details:hover p {
+  color: #f5f5f5;
+}
+
+.blog-details:hover div {
+  color: #f5f5f5;
+}
+
+.create {
+  margin: 15vh auto;
+  border: 1px solid rgb(205, 201, 201);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  max-width: 500px;
+  background-color: #c0baba;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.create h2 {
+  font-size: 20px;
+  color: #df289f;
+  margin-bottom: 10px;
+}
+
+.create label {
+  text-align: left;
+  display: block;
+}
+
+.create input,
+.create textarea,
+.create select {
+  display: block;
+  margin: 10px auto;
+  width: 100%;
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.create span {
+  font-size: 15px;
+  margin-top: 10px;
+  color: #2896df;
+  font-weight: bold;
+}
+
+.create button {
+  background-color: rgb(34, 67, 143);
+  color: #f5f5f5;
+  padding: 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.edit {
+  margin: 8vh auto;
+  border: 1px solid rgb(205, 201, 201);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 500px;
+  background-color: #c0baba;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.edit h2 {
+  font-size: 20px;
+  color: #df289f;
+  margin-bottom: 10px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.edit label {
+  text-align: left;
+  display: block;
+  color: #df289f;
+  font-weight: bold;
+}
+
+.edit input,
+.edit select {
+  display: block;
+  margin: 10px auto;
+  width: 100%;
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.edit textarea {
+  display: block;
+  margin: 10px auto;
+  width: 100%;
+  height: 100px;
+  padding: 6px 10px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+.edit .actions {
+  text-align: center;
+}
+
+.edit button {
+  background-color: rgb(34, 67, 143);
+  color: #f5f5f5;
+  padding: 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.edit button:hover {
+  background-color: #171821;
+  color: #f5f5f5;
+}
+
+.blog-preview {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid rgb(205, 201, 201);
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  width: 90%;
+  height: 90%;
+  background-color: #f5f5f5;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s, color 0.2s;
+}
+
+.blog-preview h2 {
+  font-size: 20px;
+  color: #df289f;
+  margin-bottom: 10px;
+}
+
+.blog-preview:hover {
+  transform: scale(1.01);
+  box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgb(34, 38, 39);
+}
+
+.blog-preview:hover h2 {
+  color: #f5f5f5;
+}
+
+.blog-preview:hover p {
+  color: #f10505;
+}
+
+.btn {
+  background-color: rgb(34, 67, 143);
+  color: #f5f5f5;
+  padding: 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.btn:hover {
+  background-color: #171821;
+  color: #f5f5f5;
+}
+
+.btn-delete {
+  background-color: #bc50c0;
+  color: #f5f5f5;
+  padding: 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.btn-delete:hover {
+  background-color: #171821;
+  color: #f5f5f5;
+}
+
+.btn-edit {
+  background-color: rgb(34, 67, 143);
+  color: #f5f5f5;
+  padding: 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.btn-edit:hover {
+  background-color: #171821;
+  color: #f5f5f5;
+}
+
+.Error {
+  background-color: rgb(216, 7, 7);
+  color: #f5f5f5;
+  padding: 10px;
+  border-radius: 20px;
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  transition: background-color 0.2s, color 0.2s;
+  margin: 100px;
+}
+
+.not-found {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loading-spinner {
+  width: 50px;
+  height: 50px;
+  border: 10px solid #b5a9a9;
+  border-top: 10px solid #da08ed;
+  border-radius: 50%;
+  animation: spinner 1.5s linear infinite;
+}
+
+.spinner-container {
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  height: 350px;
+  margin: 50px;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .blog-list {
+    grid-template-columns: auto;
+    margin: 20px;
+    grid-gap: 60px;
+  }
 }
